EDSC-273: Fix line wrapping in button details

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -128,7 +128,15 @@
   }
 
   p.button-details {
-    line-height: 36px;
+    span {
+      display: block;
+      position: relative;
+      top: 50%;
+      -ms-transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-50%);
+    }
+    height: 36px;
   }
 
   .button {
